--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
+    "material-ui": "^1.0.0-beta.10",
+    "material-ui-icons": "^1.0.0-beta.10",
     "normalizr": "^3.2.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-jss": "^7.1.0",
     "react-motion": "^0.5.1",
     "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
     "redux": "^3.7.2",
     "reselect": "^3.0.1"
