--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
+    "history": "^4.7.2",
     "material-ui": "^1.0.0-beta.10",
     "material-ui-icons": "^1.0.0-beta.10",
     "normalizr": "^3.2.3",
@@ -13,6 +14,7 @@
     "react-motion": "^0.5.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.0.13",
     "redux": "^3.7.2",
     "reselect": "^3.0.1"
