--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "concurrently \"npm run start-server\" \"npm run client\"",
+    "start-server": "npm run build && npm run serve",
+    "build": "npm run build-ts && npm run copy-static-assets",
     "client": "node ./start-client.js",
-    "server": "node ./bin/www"
+    "serve": "node ./bin/www",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "copy-static-assets": "node copyStaticAssets.js"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -15,6 +20,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
+    "errorhandler": "^1.5.0",
     "express": "~4.15.2",
     "express-session": "^1.15.5",
     "mongoose": "^4.11.11",
@@ -22,9 +28,17 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/body-parser": "^1.16.5",
+    "@types/connect-mongo": "^0.0.33",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/errorhandler": "^0.0.31",
+    "@types/express": "^4.0.37",
+    "@types/express-session": "^1.15.3",
+    "@types/mongoose": "^4.7.23",
+    "@types/morgan": "^1.7.33",
+    "@types/serve-favicon": "^2.2.29",
     "concurrently": "^3.5.0",
-    "eslint": "4.6.0",
-    "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-plugin-import": "2.7.0"
+    "shelljs": "^0.7.8"
   }
 }
