--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,18 @@
     "flow": "flow"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/classnames": "^2.2.3",
+    "@types/history": "^4.6.0",
+    "@types/normalizr": "^2.0.18",
+    "@types/react": "^16.0.7",
+    "@types/react-dom": "^15.5.4",
+    "@types/react-motion": "^0.0.23",
+    "@types/react-redux": "^5.0.9",
+    "@types/react-router-dom": "^4.0.8",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
+    "@types/reselect": "^2.2.0",
     "eslint-config-prettier": "^2.4.0",
     "eslint-plugin-prettier": "^2.2.0",
     "flow-bin": "^0.54.1",
