--- a/client/package.json
+++ b/client/package.json
@@ -1,49 +1,46 @@
 {
-  "name": "client",
+  "name": "weibo-ts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
     "classnames": "^2.2.5",
     "history": "^4.7.2",
-    "material-ui": "^1.0.0-beta.10",
+    "material-ui": "^1.0.0-beta.12",
     "material-ui-icons": "^1.0.0-beta.10",
     "normalizr": "^3.2.3",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-jss": "^7.1.0",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-motion": "^0.5.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
-    "react-scripts": "1.0.13",
+    "react-scripts-ts": "2.7.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "flow": "flow"
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/classnames": "^2.2.3",
     "@types/history": "^4.6.0",
+    "@types/jest": "^21.1.1",
+    "@types/node": "^8.0.31",
     "@types/normalizr": "^2.0.18",
     "@types/react": "^16.0.7",
     "@types/react-dom": "^15.5.4",
     "@types/react-motion": "^0.0.23",
     "@types/react-redux": "^5.0.9",
     "@types/react-router-dom": "^4.0.8",
+    "@types/react-router-redux": "^5.0.8",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
-    "@types/reselect": "^2.2.0",
-    "eslint-config-prettier": "^2.4.0",
-    "eslint-plugin-prettier": "^2.2.0",
-    "flow-bin": "^0.54.1",
-    "prettier": "^1.7.0"
+    "@types/reselect": "^2.2.0"
   }
 }
