--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -13,10 +13,10 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
-    // "experimentalDecorators": true
+    "experimentalDecorators": true
   },
   "exclude": [
     "node_modules",
