--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,11 @@
     "axios": "^0.16.2",
     "classnames": "^2.2.5",
     "history": "^4.7.2",
-    "material-ui": "^1.0.0-beta.13",
+    "material-ui": "^1.0.0-beta.16",
     "material-ui-icons": "^1.0.0-beta.15",
     "normalizr": "^3.2.3",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-motion": "^0.5.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
@@ -29,18 +29,23 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/classnames": "^2.2.3",
+    "@types/enzyme": "^2.8.12",
     "@types/history": "^4.6.0",
     "@types/jest": "^21.1.1",
     "@types/node": "^8.0.31",
     "@types/normalizr": "^2.0.18",
     "@types/react": "^16.0.7",
-    "@types/react-dom": "^15.5.4",
+    "@types/react-dom": "^16.0.1",
     "@types/react-motion": "^0.0.23",
     "@types/react-redux": "^5.0.9",
     "@types/react-router-dom": "^4.0.8",
     "@types/react-router-redux": "^5.0.8",
+    "@types/react-test-renderer": "^16.0.0",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
-    "@types/reselect": "^2.2.0"
+    "@types/reselect": "^2.2.0",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
+    "react-test-renderer": "^16.0.0"
   }
 }
