--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,11 @@
     "classnames": "^2.2.5",
     "history": "^4.7.2",
     "material-ui": "^1.0.0-beta.17",
-    "material-ui-icons": "^1.0.0-beta.15",
-    "normalizr": "^3.2.3",
+    "material-ui-icons": "^1.0.0-beta.17",
+    "normalizr": "^3.2.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-motion": "^0.5.1",
+    "react-motion": "^0.5.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
@@ -27,23 +27,15 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/classnames": "^2.2.3",
-    "@types/enzyme": "^2.8.12",
-    "@types/history": "^4.6.0",
-    "@types/jest": "^21.1.1",
-    "@types/node": "^8.0.31",
-    "@types/normalizr": "^2.0.18",
-    "@types/react": "^16.0.7",
+    "@types/enzyme": "^3.1.0",
+    "@types/jest": "^21.1.3",
+    "@types/node": "^8.0.41",
+    "@types/react": "^16.0.13",
     "@types/react-dom": "^16.0.1",
-    "@types/react-motion": "^0.0.23",
-    "@types/react-redux": "^5.0.9",
+    "@types/react-redux": "^5.0.10",
+    "@types/react-router": "^4.0.15",
     "@types/react-router-dom": "^4.0.8",
     "@types/react-router-redux": "^5.0.8",
-    "@types/react-test-renderer": "^16.0.0",
-    "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0",
-    "@types/reselect": "^2.2.0",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
     "react-test-renderer": "^16.0.0"
