--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -13,10 +13,9 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
-    "strictNullChecks": false,
+    "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true,
-    "experimentalDecorators": true
+    "noUnusedLocals": true
   },
   "exclude": [
     "node_modules",
