--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/enzyme": "^3.1.0",
     "@types/jest": "^21.1.3",
+    "@types/nock": "^8.2.1",
     "@types/node": "^8.0.41",
     "@types/react": "^16.0.13",
     "@types/react-dom": "^16.0.1",
@@ -36,8 +37,11 @@
     "@types/react-router": "^4.0.15",
     "@types/react-router-dom": "^4.0.8",
     "@types/react-router-redux": "^5.0.8",
+    "@types/redux-mock-store": "^0.0.11",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
-    "react-test-renderer": "^16.0.0"
+    "nock": "^9.0.22",
+    "react-test-renderer": "^16.0.0",
+    "redux-mock-store": "^1.3.0"
   }
 }
